# Chat-app

./: .gitignore  README.md  chatapp.db  pyproject.toml  requirements.txt
docs/: app.html  server.html
docs/_modules/: app.html  index.html  server.html
docs/_sources/: index.rst.txt
files/: test2_553babaf5db34f00b70f3faa43bcd4ae.txt
src/: app.py  server.py
